--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -39,7 +39,7 @@
     border-bottom: 4px solid rgb(var(--first-plan));
     border-left: 4px solid white;
     z-index: 2;
-    transition: transform .3s cubic-bezier(.22,1.12,1,.98);;
+    transition: transform .5s cubic-bezier(.22,1.12,1,.98);
 }
 
 .line2{
@@ -53,6 +53,7 @@
     border-right: 2px solid white;
     border-bottom: 2px solid rgb(var(--first-plan));
     border-left: 2px solid white;
+    transition: transform .3s cubic-bezier(.22,1.12,1,.98);
 }
 
 .about-content{
